<resources>
    <string name="app_name">AVG</string>
    <string name="setting_app"><b>Thiết lập</b></string>
    <string name="more_bottom_nav">Thêm</string>
    <string name="personal_tab">Cá nhân</string>
    <string name="home_page">Trang chủ</string>
    <string name="title_live_tv">Truyền hình</string>
    <string name="title_movies">Clip</string>
    <string name="title_tv_shows">TV Show</string>
    <string name="title_personal">Cá nhân</string>
    <string name="next">Tiếp tục</string>
    <string name="coppy_right">Copyright ©</string>
    <string name="comany">Công ty Cổ phần nghe nhìn Toàn Cầu 2020</string>
    <string name="sign_up_mes">Nhập số điện thoại\nđăng ký</string>
    <string name="sign_in_mes">Đăng nhập để\ntrải nghiệm cùng AVG</string>
    <string name="ignore">Bỏ qua</string>
    <string name="phone">Số điện thoại</string>
    <string name="acount">Tài khoản</string>
    <string name="password">Mật khẩu</string>
    <string name="login">ĐĂNG NHẬP</string>
    <string name="forgot_password">Quên mật khẩu?</string>
    <string name="or">Hoặc</string>
    <string name="sign_up_msg">Bạn chưa đăng ký, vui lòng soạn DK MTV1 gửi 6387 (2.000/ngày) để đăng ký dịch vụ.</string>
    <string name="sign_up">Đăng ký</string>
    <string name="free">miễn phí</string>
    <string name="confirm">XÁC NHẬN</string>
    <string name="pre_term_of_use">Tôi đã đọc và đồng ý với các</string>
    <string name="pos_term_of_use">của AVG</string>
    <string name="term_of_use">Tôi đã đọc và đồng ý với các điều khoản sử dụng của AVG.</string>
    <string name="back"> </string>
    <string name="notification">THÔNG BÁO</string>
    <string name="message_login_failed">Đăng nhập thất bại. Vui lòng kiểm tra lại số điện thoại hoặc mật khẩu.</string>
    <string name="ok">Đồng ý</string>
    <string name="live_tv">Truyền hình</string>
    <string name="movies">Clip</string>
    <string name="tv_shows">TV Show</string>
    <string name="personal"><b>Trang cá nhân</b></string>
    <string name="playing">Đang Phát</string>
    <string name="more">More</string>
    <string name="list">Danh sách</string>
    <string name="people_watching">lượt xem</string>
    <string name="watch_more">Xem thêm</string>
    <string name="watch_less">Thu gọn</string>
    <string name="save">LƯU</string>
    <string name="download">TẢI VỀ</string>
    <string name="comment">BÌNH LUẬN</string>
    <string name="director">Đạo Diễn</string>
    <string name="loading_error">Đã xảy ra lỗi, vui lòng xem lại sau!</string>
    <string name="tv_series">Phim bộ</string>
    <string name="term_of_use_content">term_of_use.html</string>
    <string name="re_password">Nhập lại mật khẩu</string>
    <string name="enter_otp">Nhập mã xác nhận</string>
    <string name="not_receive_otp">Không nhận được mã OTP?\u0020</string>
    <string name="resend_otp">Gửi lại\u0020</string>
    <string name="expire_in">Hiệu lực xác nhận</string>
    <string name="second">giây\u0020</string>
    <string name="confirm_otp_title">Mã xác nhận đã gửi về số điện thoại 097****657 đã đăng ký</string>
    <string name="actor">Diễn viên</string>
    <string name="rate">ĐÁNH GIÁ</string>
    <string name="movies_related">CÓ THỂ BẠN QUAN TÂM</string>
    <string name="common_message_error">Đã có lỗi xảy ra. Vui lòng thử lại!</string>
    <string name="forget_password_mes">Nhập số điện thoại đã \nđăng ký</string>
    <string name="new_password_title">Nhập mật khẩu mới</string>
    <string name="log_out">Đăng xuất</string>
    <string name="cancel">Bỏ qua</string>
    <string name="cancelScard">Từ chối</string>
    <string name="continue_watching_message">Phim này đang được xem gián đoạn, bạn có muốn xem tiếp?</string>
    <string name="continue_watching">Xem tiếp</string>
    <string name="settings">Cài đặt</string>
    <string name="storage_manager">Quản lý dung lượng</string>
    <string name="search">Tìm kiếm</string>
    <string name="recent_search">Tìm kiếm gần đây</string>
    <string name="personal_page">CÁ NHÂN</string>
    <string name="cartoon_page">HOẠT HÌNH</string>
    <string name="music_page">CA NHẠC</string>
    <string name="all">Tất cả</string>
    <string name="minute">phút</string>
    <string name="episode">tập</string>
    <string name="register">đăng ký</string>
    <string name="input_phone">Nhập số điện thoại</string>
    <string name="connectivity_lost_error">Đã xảy ra lỗi. Vui lòng kiểm tra lại kết nối.</string>
    <string name="trending">Thông dụng</string>
    <string name="no_search_result">Không có kết quả tìm kiếm</string>
    <string name="scaling_mode_fill">FILL</string>
    <string name="scaling_mode_fit">FIT</string>
    <string name="scaling_mode_crop">CROP</string>
    <string name="comment_hint">Viết gì đó…</string>
    <string name="send">GỬI</string>
    <string name="auto_next_message">Tự động chuyển tập sau</string>
    <string name="log_in_to_comment">Đăng nhập để bình luận.</string>
    <string name="connect_social">Kết nối mạng xã hội</string>
    <string name="request_login_message">Bạn cần đăng nhập để sử dụng chức năng này</string>
    <string name="no_favourite_item">Bạn chưa có phim ưa thích nào!</string>
    <string name="no_watched_item">Bạn chưa xem phim nào!</string>
    <string name="no_comment_yet">Chưa có bình luận nào cho phim này.</string>

    <string name="scard">Mã số thẻ </string>
    <string name="submitScard"> Đăng ký </string>
    <string name="scard_menu_name"> Đăng ký thẻ đầu thu </string>
    <string name="scard_num_name"> Số thẻ đầu thu: </string>
    <string name="scard_info_text"> Thông tin tài khoản </string>
    <string name="scard_expired_label_text"> Ngày hết hạn: </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="common_message_empty_card_error">Chưa nhập số thẻ!</string>
    <string name="common_message_duplicate_card">Số thẻ cập nhật trùng với số thẻ hiện tại. Vui lòng nhập thẻ mới!</string>
    <string name="common_message_login_card">Vui lòng đăng nhập trước khi đăng ký thẻ. Chân trọng cảm ơn!</string>
    <string name="common_scard_complete">Bạn vừa đăng ký thẻ thành công!</string>
    <string name="edit">Edit</string>
</resources>
